# z80uPC

./: .gitignore  AUTHORS  LICENSE  TODO
doc/: BOM.ods  components_list.ods
doc/report/: build.cmd  makefile  notes.tex  z80uPC.tex  z80uPC_nostyle.tex
hw/: BOM.BomDoc  BusViewer.SchDoc  HITACHI Memory Non-Volatile RAM.SchLib  IODevices.SchDoc  Job1.OutJob  MainBoard.PcbDoc  MainBoard.PcbLib  MainBoard1.PcbDoc  MainSheet.SchDoc  Peripherals.SchDoc  Power.SchDoc  z80uPC.IntLib  z80uPC.PcbLib  z80uPC.PrjPCB  z80uPC.PrjPCBStructure  z80uPC.SCHLIB  zilog_z80.SchLib
hw-altium/: Altium Libraries.lnk  BusViewer.SchDoc  HITACHI Memory Non-Volatile RAM.SchLib  Job1.OutJob  MainBoard.PcbLib  Power.SchDoc  Seiko Epson Oscillator.SchLib  z80uPC.PrjPCBStructure  z80uPC.SCHLIB
hw-altium/Project Outputs for z80uPC/: MainSheet.NET  Status Report.Txt
hw-altium/__Previews/: Connectors.SchDocPreview  MainBoard.PcbDocPreview  Peripherals.SchDocPreview
hw-kicad/z80uPC/: z80uPC-cache.lib  z80uPC.sch
hw/Project Outputs for z80uPC/: Design Rule Check - MainBoard.drc  Design Rule Check - MainBoard.html  Status Report.Txt
hw/__Previews/: AddrDecoder.SchDocPreview  BusViewer.SchDocPreview  IODevices.SchDocPreview  MainBoard.PcbDocPreview  MainBoard1.PcbDocPreview  MainSheet.SchDocPreview  Peripherals.SchDocPreview  Power.SchDocPreview
res/ATFBlast_ALL/: ATFblast.TIF  ATFblast.pcb  program.htm
sw-avr/rom-loader/: main.c  (+4 more)
sw/linux/: configure.ac  makefile.am  reading_links.txt
sw/linux/src/: main.c  makefile.am  serial.c  ui.h  z80prog
tmp/: dis.txt  dis_old.txt  pio_test.z80
(+274 files in other folders)
